--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AZURE_APP_CONFIGURATION": "Endpoint=https://kevinsconfiguration.azconfig.io;Id=Gq4Z;Secret=21MoASPU7WPTIqo/qL3d/Xq79uPIqojFDNX8NWQA9eQ="
+    "AZURE_APP_CONFIGURATION": ""
 }
