--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "LOCAL_DB_CONNECTION": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=KEVINS;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=Yes;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
     "AZURE_APP_CONFIGURATION": "Endpoint=https://kevinsconfiguration.azconfig.io;Id=Gq4Z;Secret=21MoASPU7WPTIqo/qL3d/Xq79uPIqojFDNX8NWQA9eQ="
 }
+
+
