--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "ConnectionStrings": {
+        "LOCAL_DB_CONNECTION": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=KEVINS;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=Yes;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
     "AllowedHosts": "*",
     "AZURE_APP_CONFIGURATION": ""
 }
