--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "LOCAL_DB_CONNECTION": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=KEVINS;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=Yes;Application Intent=ReadWrite;Multi Subnet Failover=False"
+        "LOCAL_DB_CONNECTION": ""
     },
     "AllowedHosts": "*",
     "AZURE_APP_CONFIGURATION": ""
